[gd_scene load_steps=5 format=3 uid="uid://cnjr62ywpbn56"]

[ext_resource type="Script" uid="uid://bmcbhx5tldgga" path="res://Scripts/Game Manager.gd" id="1_6qtm5"]
[ext_resource type="Texture2D" uid="uid://ctlbyxpbrjslc" path="res://Assets/Sprites/Screws.png" id="2_j6ebe"]
[ext_resource type="PackedScene" uid="uid://qok77ue2qooy" path="res://Scenes/pause_scene.tscn" id="4_af5os"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wac38"]
bg_color = Color(0.905882, 0.909804, 0.745098, 1)

[node name="Game Manager" type="Node"]
script = ExtResource("1_6qtm5")

[node name="Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="TowerButtons" type="HBoxContainer" parent="Interface"]
layout_mode = 0
offset_left = -117.0
offset_top = -115.0
offset_right = 205.0
offset_bottom = -75.0
scale = Vector2(0.75, 0.75)
theme_override_constants/separation = 2

[node name="ColorRect" type="ColorRect" parent="Interface"]
layout_mode = 0
offset_left = -171.0
offset_top = -124.0
offset_right = -124.0
offset_bottom = -84.0
color = Color(0, 0.490196, 0.494118, 1)

[node name="TextureRect" type="TextureRect" parent="Interface"]
layout_mode = 0
offset_left = -170.0
offset_top = -113.0
offset_right = -130.0
offset_bottom = -73.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_j6ebe")

[node name="MoneyLabel" type="Label" parent="Interface"]
layout_mode = 0
offset_left = -153.0
offset_top = -116.0
offset_right = -100.0
offset_bottom = -90.0
text = "fdsfdsf"

[node name="GameOver" type="PanelContainer" parent="Interface"]
visible = false
layout_mode = 0
offset_left = -104.0
offset_top = -68.0
offset_right = 103.0
offset_bottom = 44.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wac38")

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/GameOver"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/GameOver/VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1

[node name="ROUS-es killed" type="Label" parent="Interface/GameOver/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="Interface/GameOver/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 8.15
text = "Retry"

[node name="PauseScene" parent="Interface" instance=ExtResource("4_af5os")]
visible = false
layout_mode = 1
offset_left = -35.0
offset_top = -42.0
offset_right = -35.0
offset_bottom = -42.0
scale = Vector2(0.445, 0.445)

[node name="PauseButton" type="Button" parent="Interface"]
layout_mode = 0
offset_left = 120.0
offset_top = -115.0
offset_right = 175.0
offset_bottom = -84.0
text = "Pause"

[connection signal="pressed" from="Interface/GameOver/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Interface/PauseButton" to="." method="_on_pause_button_pressed"]
